--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h3><a href="">Task 1</a></h3>
-    <h3><a href="">Task 2</a></h3>
+    <h3><a href="https://nukaladinesh.github.io/day260724Tasks/Task1.html">Task 1</a></h3>
+    <h3><a href="https://nukaladinesh.github.io/day260724Tasks/Task2.html">Task 2</a></h3>
     
 </body>
 </html>
